add validation and navbar and order page

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "pg": "^8.7.1",
+    "req-flash": "^0.0.3",
     "sequelize": "^6.6.5"
   }
 }
