--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
+    "nodemailer": "^6.6.3",
     "pg": "^8.7.1",
     "req-flash": "^0.0.3",
     "sequelize": "^6.6.5"
